--- a/src/app/ships/ship/ship.page.html
+++ b/src/app/ships/ship/ship.page.html
@@ -305,7 +305,7 @@
           <ion-col>
             Quantity
           </ion-col>
-          <ion-col>
+          <ion-col title="Cost of Goods">
             COG
           </ion-col>
           <ion-col>
