--- a/src/app/control-room/control-room.page.html
+++ b/src/app/control-room/control-room.page.html
@@ -1,26 +1,29 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Control Room at {{us.aSolarBody.name}}</ion-title>
-    <ion-segment [(ngModel)]="nsTab">
-      <ion-segment-button value="warehouse">
-        <ion-label>Warehouse</ion-label>
-      </ion-segment-button>
-      <ion-segment-button value="colony">
-        <ion-label>Colony</ion-label>
-      </ion-segment-button>
-      <ion-segment-button value="businesses">
-        <ion-label>Businesses</ion-label>
-      </ion-segment-button>
-      <ion-segment-button value="stations">
-        <ion-label>Stations</ion-label>
-      </ion-segment-button>
-      <!--
-      <ion-segment-button value="travel">
-        <ion-label>Travel</ion-label>
-      </ion-segment-button>
-      -->
-    </ion-segment>
   </ion-toolbar>
+  <ion-segment [(ngModel)]="nsTab">
+    <ion-segment-button value="warehouse">
+      <ion-label>Warehouse</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="colony">
+      <ion-label>Colony</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="businesses">
+      <ion-label>Businesses</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="stations">
+      <ion-label>Stations</ion-label>
+    </ion-segment-button>
+    <!--
+    <ion-segment-button value="travel">
+      <ion-label>Travel</ion-label>
+    </ion-segment-button>
+    -->
+  </ion-segment>
 </ion-header>
 
 <ion-content [ngSwitch]="nsTab">
@@ -28,7 +31,7 @@
     <app-warehouse *ngIf="warehouseBoot" [warehouseID]="warehouseID"></app-warehouse>
   </span>
 
-  <app-trade *ngSwitchCase="'colony'" [market]="'colony'" [trader]="'warehouse'"></app-trade>
+  <app-colony *ngSwitchCase="'colony'" [market]="'colony'" [trader]="'warehouse'" [traderID]="warehouseS.aWarehouse.id"></app-colony>
 
   <ion-card id="businesses" *ngSwitchCase="'businesses'">
     <ion-card-header>
@@ -42,7 +45,7 @@
     <!--<app-businesses></app-businesses>-->
   </ion-card>
 
-  <app-stations trader='warehouse' *ngSwitchCase="'stations'"></app-stations>
+  <app-stations trader='warehouse' [traderID]="warehouseS.aWarehouse.id" [solarBodyID]="warehouseS.aWarehouse.solarBody" *ngSwitchCase="'stations'"></app-stations>
 
   <ion-card id="travel" *ngSwitchCase="'travel'">
     <ion-card-header>
