--- a/src/app/login-register/login-register.page.html
+++ b/src/app/login-register/login-register.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Universe Trader</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -49,7 +52,7 @@
 
       <span [ngSwitch]="nsTab">
         <span *ngSwitchCase="'login'">
-          <ion-button type="button" color="primary" (click)="loginUser()">Log In</ion-button>
+          <ion-button type="button" color="primary" (click)="login('ep')">Log In</ion-button>
           &nbsp;
           &nbsp;
           &nbsp;
@@ -61,7 +64,11 @@
       </span>
 
       <div class="form-group text-center">
-        <img src="../../assets/images/loginGoogle.png" alt="" srcset="" (click)="googleLogin()" style="cursor: pointer;">
+        <img src="../../assets/images/loginGoogle.png" alt="" srcset="" (click)="login('google')" style="cursor: pointer;">
+      </div>
+
+      <div>
+        By using this site you agree to the <a href="" routerLink="/tos">Terms of Service</a>
       </div>
 
     </ion-card-content>
