--- a/src/app/modal/modal.page.html
+++ b/src/app/modal/modal.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>{{modalType | uppercase}}</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="dismissModal()" color="danger" fill="solid">Close</ion-button>
