--- a/src/app/ships/ship-modal/ship-modal.page.html
+++ b/src/app/ships/ship-modal/ship-modal.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title *ngIf="shipS.aShip">{{shipS.aShip.name}}</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="dismissModal()">Close</ion-button>
