--- a/src/app/stations/station/station.page.html
+++ b/src/app/stations/station/station.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Station</ion-title>
     <ion-buttons slot="end" *ngIf="isModal">
       <ion-button color="danger" fill="solid" (click)="dismissModal()">Exit</ion-button>
@@ -47,7 +50,7 @@
       <ion-title>Market</ion-title>
     </ion-card-header>
     <ion-card-content>
-      <app-trade [market]="'station'" [trader]="trader"></app-trade>
+      <app-trade [market]="'station'" [trader]="trader" [traderID]="traderID"></app-trade>
     </ion-card-content>
   </ion-card>
 
