--- a/src/app/universe/universe.page.html
+++ b/src/app/universe/universe.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Universe</ion-title>
     <ion-segment [(ngModel)]="nsTab">
       <ion-segment-button value="solarSystems">
