Beta 2 *Mobile Friendly Updates. *QOL Updates for trading and transferring items *Ships can now min ore and silicone *Modules can now be added to ship's and upgraded *New ships can be assembled from the warehouse.

--- a/src/app/login-register/login-register.page.html
+++ b/src/app/login-register/login-register.page.html
@@ -32,7 +32,7 @@
     <ion-card-header>
       <ion-card-title style="text-align: center">Login or Register</ion-card-title>
     </ion-card-header>
-    <ion-card-content >
+    <ion-card-content *ngIf="appStatus; else notAllowed">
       <ion-segment [(ngModel)]="nsTab">
         <ion-segment-button value="login">
           <ion-label>Login</ion-label>
@@ -72,5 +72,13 @@
       </div>
 
     </ion-card-content>
+
+    <ng-template #notAllowed>
+      <ion-card-content>
+        The Servers are offline for Maintenance
+      </ion-card-content>
+    </ng-template>
+
+
   </ion-card>
 </ion-content>
