--- a/src/app/ships/ship/ship.page.html
+++ b/src/app/ships/ship/ship.page.html
@@ -248,6 +248,171 @@
         </ion-card>
       </ion-col>
 
+      <ion-col id="operations">
+        <ion-card id="oIdle" *ngIf="shipS.aShip.status === 'Idle'">
+          <ion-card-header>
+            <ion-card-title>Available Operations</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-grid>
+              <ion-col>
+                <ion-button
+                  *ngIf="uniS.aSolarBody.resourceOne === 'ore' && shipS.aShip.moduleMiningLaser || uniS.aSolarBody.resourceOne === 'silicone' && shipS.aShip.moduleMiningLaser"
+                  (click)="beginMining(uniS.aSolarBody.resourceOne, uniS.aSolarBody.resourceOneYield)"
+                >
+                  Begin Mining {{uniS.aSolarBody.resourceOne}}
+                </ion-button>
+              </ion-col>
+              <ion-col>
+                <ion-button
+                  *ngIf="uniS.aSolarBody.resourceTwo === 'ore' && shipS.aShip.moduleMiningLaser || uniS.aSolarBody.resourceTwo === 'silicone' && shipS.aShip.moduleMiningLaser"
+                  (click)="beginMining(uniS.aSolarBody.resourceTwo, uniS.aSolarBody.resourceTwoYield)"
+                >
+                  Begin Mining {{uniS.aSolarBody.resourceTwo}}
+                </ion-button>
+              </ion-col>
+            </ion-grid>
+          </ion-card-content>
+        </ion-card>
+
+        <ion-card id="oMining" *ngIf="shipS.aShip.status === 'Mining'">
+          <ion-card-header>
+            <ion-card-title>Available Operations</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-grid>
+              <ion-col>
+                <ion-item>
+                  <ion-label>Mining</ion-label>
+                  <ion-label>{{shipS.aShip.miningTarget}}</ion-label>
+                </ion-item>
+              </ion-col>
+              <ion-col>
+                <ion-item>
+                  <ion-label>Laser Level</ion-label>
+                  <ion-label>{{shipS.aShip.moduleMiningLaserLevel}}</ion-label>
+                </ion-item>
+              </ion-col>
+              <ion-col>
+                <ion-item>
+                  <ion-label>Resource Base Yield</ion-label>
+                  <ion-label>
+                    <span *ngIf="shipS.aShip.miningTarget === 'ore'">{{ss.aRules.mining.mOre}}</span>
+                    <span *ngIf="shipS.aShip.miningTarget === 'silicone'">{{ss.aRules.mining.mSilicone}}</span>
+                  </ion-label>
+                </ion-item>
+              </ion-col>
+              <ion-col>
+                <ion-item>
+                  <ion-label>Resource System Yield</ion-label>
+                  <ion-label>{{shipS.aShip.miningYield}}%</ion-label>
+                </ion-item>
+              </ion-col>
+              <ion-col>
+                <ion-item>
+                  <ion-label>Total per 15 Minute Cycle:</ion-label>
+                  <ion-label>
+                    <span *ngIf="shipS.aShip.miningTarget === 'ore'">
+                      {{((ss.aRules.mining.mOre * shipS.aShip.moduleMiningLaserLevel) * (shipS.aShip.miningYield / 100))}}
+                    </span>
+                    <span *ngIf="shipS.aShip.miningTarget === 'silicone'">
+                      {{((ss.aRules.mining.mSilicone * shipS.aShip.moduleMiningLaserLevel) * (shipS.aShip.miningYield / 100))}}
+                    </span>
+                  </ion-label>
+                </ion-item>
+              </ion-col>
+              <ion-col>
+                <ion-item>
+                  <ion-label>
+                    Mining Cycle Finishes at
+                  </ion-label>
+                  <ion-label>{{eta(shipS.aShip.miningEndTime)}}</ion-label>
+                </ion-item>
+              </ion-col>
+              <ion-col>
+                <ion-item>
+                  <ion-label>
+                    If your ship does not have room, the excess is lost.
+                  </ion-label>
+                </ion-item>
+              </ion-col>
+
+            </ion-grid>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col id="locationDetails">
+        <ion-card id="ldIdle">
+          <ion-card-header>
+            <ion-card-title>Location Details</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-grid *ngIf="shipS.aShip.status === 'Idle'">
+              <ion-row *ngIf="platform.sizeTemplate === 'standard'">
+                <ion-col>
+                  <ion-item>
+                    <ion-label>Name</ion-label>
+                    <ion-label>{{shipS.aShip.solarBodyName}}</ion-label>
+                  </ion-item>
+                  <ion-item>
+                    <ion-label>Type</ion-label>
+                    <ion-label>{{uniS.aSolarBody.solarBodyType | uppercase}}</ion-label>
+                  </ion-item>
+                  <ion-item>
+                    <ion-label>Coordinates</ion-label>
+                    <ion-label>{{uniS.aSolarBody.xCoordinate}}, {{uniS.aSolarBody.yCoordinate}}</ion-label>
+                  </ion-item>
+                  <ion-item>
+                    <ion-label>Primary Export</ion-label>
+                    <ion-label>{{uniS.aSolarBody.resourceOne | uppercase}} @ {{uniS.aSolarBody.resourceOneYield}}%</ion-label>
+                  </ion-item>
+                  <ion-item>
+                    <ion-label>Secondary Export</ion-label>
+                    <ion-label>{{uniS.aSolarBody.resourceTwo | uppercase}} @ {{uniS.aSolarBody.resourceTwoYield}}%</ion-label>
+                  </ion-item>
+                </ion-col>
+              </ion-row>
+
+              <ion-row *ngIf="platform.sizeTemplate === 'small'">
+                <ion-col>
+                  <ion-item>
+                    <ion-note slot="helper">Name</ion-note>
+                    <ion-label>{{shipS.aShip.solarBodyName}}</ion-label>
+                  </ion-item>
+                </ion-col>
+                <ion-col>
+                  <ion-item>
+                    <ion-note slot="helper">Type</ion-note>
+                    <ion-label>{{uniS.aSolarBody.solarBodyType | uppercase}}</ion-label>
+                  </ion-item>
+                </ion-col>
+                <ion-col>
+                  <ion-item>
+                    <ion-note slot="helper">Coordinates</ion-note>
+                    <ion-label>{{uniS.aSolarBody.xCoordinate}}, {{uniS.aSolarBody.yCoordinate}}</ion-label>
+                  </ion-item>
+                </ion-col>
+                <ion-col>
+                  <ion-item>
+                    <ion-note slot="helper">Primary Export</ion-note>
+                    <ion-label>{{uniS.aSolarBody.resourceOne | uppercase}} @ {{uniS.aSolarBody.resourceOneYield}}%</ion-label>
+                  </ion-item>
+                </ion-col>
+                <ion-col>
+                  <ion-item>
+                    <ion-note slot="helper">Secondary Export</ion-note>
+                    <ion-label>{{uniS.aSolarBody.resourceTwo | uppercase}} @ {{uniS.aSolarBody.resourceTwoYield}}%</ion-label>
+                  </ion-item>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+
       <ion-col id="Travel" *ngIf="shipS.aShip.status === 'Idle' || shipS.aShip.status === 'Traveling'">
         <ion-card *ngIf="shipS.aShip.status === 'Idle' && shipS.aShip.moduleEngine === true && shipS.aShip.moduleJumpEngine === true">
           <ion-card-header>
@@ -342,205 +507,65 @@
 
         <ion-card *ngIf="shipS.aShip.status === 'Traveling' && shipS.aShip.moduleEngine === true && shipS.aShip.moduleJumpEngine === true">
           <ion-card-header>
-              <ion-card-title>Flight Plan</ion-card-title>
-              <!--
-              <ion-card-subtitle>{{currentDate}}</ion-card-subtitle>
-              <ion-card-subtitle>{{currentDateAdd}}</ion-card-subtitle>
-              <ion-card-subtitle>{{date}}</ion-card-subtitle>
-              <ion-card-subtitle>{{dateTwo}}</ion-card-subtitle>
-              <ion-card-subtitle>{{timer}}</ion-card-subtitle>
-              <ion-card-subtitle>{{duration}}</ion-card-subtitle>
-              -->
-            </ion-card-header>
+            <ion-card-title>Flight Plan</ion-card-title>
+            <!--
+            <ion-card-subtitle>{{currentDate}}</ion-card-subtitle>
+            <ion-card-subtitle>{{currentDateAdd}}</ion-card-subtitle>
+            <ion-card-subtitle>{{date}}</ion-card-subtitle>
+            <ion-card-subtitle>{{dateTwo}}</ion-card-subtitle>
+            <ion-card-subtitle>{{timer}}</ion-card-subtitle>
+            <ion-card-subtitle>{{duration}}</ion-card-subtitle>
+            -->
+          </ion-card-header>
           <ion-card-content>
-              <ion-grid>
-                <ion-row>
-                  <ion-header>Solar System</ion-header>
-                  <ion-col>
-                    <ion-item lines="none">
-                      <ion-label>From</ion-label>
-                      {{aLocation.aSolarSystem.name}}: {{aLocation.aSolarSystem.xCoordinate}}, {{aLocation.aSolarSystem.yCoordinate}}
-                    </ion-item>
-                  </ion-col>
+            <ion-grid>
+              <ion-row>
+                <ion-header>Solar System</ion-header>
+                <ion-col>
+                  <ion-item lines="none">
+                    <ion-label>From</ion-label>
+                    {{aLocation.aSolarSystem.name}}: {{aLocation.aSolarSystem.xCoordinate}}, {{aLocation.aSolarSystem.yCoordinate}}
+                  </ion-item>
+                </ion-col>
 
-                  <ion-col>
-                    <ion-item lines="none">
-                      <ion-label>To</ion-label>
-                      {{shipS.aShip.travelSS}}
-                    </ion-item>
-                  </ion-col>
-                </ion-row>
+                <ion-col>
+                  <ion-item lines="none">
+                    <ion-label>To</ion-label>
+                    {{shipS.aShip.travelSS}}
+                  </ion-item>
+                </ion-col>
+              </ion-row>
 
-                <ion-row>
-                  <ion-header>Solar Body System</ion-header>
-                  <ion-col>
-                    <ion-item lines="none">
-                      <ion-label>From</ion-label>
-                      {{aLocation.aSolarBody.name}}: {{aLocation.aSolarBody.xCoordinate}}, {{aLocation.aSolarBody.yCoordinate}}
-                    </ion-item>
-                  </ion-col>
-                  <ion-col>
-                    <ion-item lines="none">
-                      <ion-label>To</ion-label>
-                      {{shipS.aShip.travelSB}}
-                    </ion-item>
-                  </ion-col>
-                </ion-row>
+              <ion-row>
+                <ion-header>Solar Body System</ion-header>
+                <ion-col>
+                  <ion-item lines="none">
+                    <ion-label>From</ion-label>
+                    {{aLocation.aSolarBody.name}}: {{aLocation.aSolarBody.xCoordinate}}, {{aLocation.aSolarBody.yCoordinate}}
+                  </ion-item>
+                </ion-col>
+                <ion-col>
+                  <ion-item lines="none">
+                    <ion-label>To</ion-label>
+                    {{shipS.aShip.travelSB}}
+                  </ion-item>
+                </ion-col>
+              </ion-row>
 
-                <ion-row>
-                  <ion-col>
-                    <ion-label>ETA</ion-label>
-                    <ion-item lines="none">{{eta(shipS.aShip.travelAT)}}</ion-item>
-                  </ion-col>
-                </ion-row>
-              </ion-grid>
-            </ion-card-content>
+              <ion-row>
+                <ion-col>
+                  <ion-label>ETA</ion-label>
+                  <ion-item lines="none">{{eta(shipS.aShip.travelAT)}}</ion-item>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-card-content>
         </ion-card>
 
         <ion-card *ngIf="shipS.aShip.moduleEngine === false || shipS.aShip.moduleJumpEngine === false">
           <ion-card-header>
             <ion-card-title>Proper Engines are not installed</ion-card-title>
           </ion-card-header>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col id="locationDetails">
-        <ion-card id="ldIdle">
-          <ion-card-header>
-            <ion-card-title>Location Details</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            <ion-grid *ngIf="shipS.aShip.status === 'Idle'">
-              <ion-row *ngIf="platform.sizeTemplate === 'standard'">
-                <ion-col>
-                  <ion-item>
-                    <ion-label>Name</ion-label>
-                    <ion-label>{{shipS.aShip.solarBodyName}}</ion-label>
-                  </ion-item>
-                  <ion-item>
-                    <ion-label>Type</ion-label>
-                    <ion-label>{{uniS.aSolarBody.solarBodyType | uppercase}}</ion-label>
-                  </ion-item>
-                  <ion-item>
-                    <ion-label>Coordinates</ion-label>
-                    <ion-label>{{uniS.aSolarBody.xCoordinate}}, {{uniS.aSolarBody.yCoordinate}}</ion-label>
-                  </ion-item>
-                  <ion-item>
-                    <ion-label>Primary Export</ion-label>
-                    <ion-label>{{uniS.aSolarBody.resourceOne | uppercase}} @ {{uniS.aSolarBody.resourceOneYield}}%</ion-label>
-                  </ion-item>
-                  <ion-item>
-                    <ion-label>Secondary Export</ion-label>
-                    <ion-label>{{uniS.aSolarBody.resourceTwo | uppercase}} @ {{uniS.aSolarBody.resourceTwoYield}}%</ion-label>
-                  </ion-item>
-                </ion-col>
-              </ion-row>
-
-              <ion-row *ngIf="platform.sizeTemplate === 'small'">
-                <ion-col>
-                  <ion-item>
-                    <ion-note slot="helper">Name</ion-note>
-                    <ion-label>{{shipS.aShip.solarBodyName}}</ion-label>
-                  </ion-item>
-                </ion-col>
-                <ion-col>
-                  <ion-item>
-                    <ion-note slot="helper">Type</ion-note>
-                    <ion-label>{{uniS.aSolarBody.solarBodyType | uppercase}}</ion-label>
-                  </ion-item>
-                </ion-col>
-                <ion-col>
-                  <ion-item>
-                    <ion-note slot="helper">Coordinates</ion-note>
-                    <ion-label>{{uniS.aSolarBody.xCoordinate}}, {{uniS.aSolarBody.yCoordinate}}</ion-label>
-                  </ion-item>
-                </ion-col>
-                <ion-col>
-                  <ion-item>
-                    <ion-note slot="helper">Primary Export</ion-note>
-                    <ion-label>{{uniS.aSolarBody.resourceOne | uppercase}} @ {{uniS.aSolarBody.resourceOneYield}}%</ion-label>
-                  </ion-item>
-                </ion-col>
-                <ion-col>
-                  <ion-item>
-                    <ion-note slot="helper">Secondary Export</ion-note>
-                    <ion-label>{{uniS.aSolarBody.resourceTwo | uppercase}} @ {{uniS.aSolarBody.resourceTwoYield}}%</ion-label>
-                  </ion-item>
-                </ion-col>
-              </ion-row>
-            </ion-grid>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-
-      <ion-col id="operations">
-        <ion-card id="oIdle" *ngIf="shipS.aShip.status === 'Idle'">
-          <ion-card-header>
-            <ion-card-title>Available Operations</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            <ion-grid>
-              <ion-col>
-                <ion-button
-                  *ngIf="uniS.aSolarBody.resourceOne === 'ore' && shipS.aShip.moduleMiningLaser || uniS.aSolarBody.resourceOne === 'silicone' && shipS.aShip.moduleMiningLaser"
-                  (click)="beginMining(uniS.aSolarBody.resourceOne, uniS.aSolarBody.resourceOneYield)"
-                >
-                  Begin Mining {{uniS.aSolarBody.resourceOne}}
-                </ion-button>
-              </ion-col>
-              <ion-col>
-                <ion-button
-                  *ngIf="uniS.aSolarBody.resourceTwo === 'ore' && shipS.aShip.moduleMiningLaser || uniS.aSolarBody.resourceTwo === 'silicone' && shipS.aShip.moduleMiningLaser"
-                  (click)="beginMining(uniS.aSolarBody.resourceTwo, uniS.aSolarBody.resourceTwoYield)"
-                >
-                  Begin Mining {{uniS.aSolarBody.resourceTwo}}
-                </ion-button>
-              </ion-col>
-            </ion-grid>
-          </ion-card-content>
-        </ion-card>
-
-        <ion-card id="oMining" *ngIf="shipS.aShip.status === 'Mining'">
-          <ion-card-header>
-            <ion-card-title>Available Operations</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            <ion-grid>
-              <ion-col>
-                <p>
-                  Mining {{shipS.aShip.miningTarget}} with a level {{shipS.aShip.moduleMiningLaserLevel}} mining laser.
-                </p>
-                <p>
-                  Base Mining Amount:
-                  <span *ngIf="shipS.aShip.miningTarget === 'ore'">{{ss.aRules.mining.mOre}}</span>
-                  <span *ngIf="shipS.aShip.miningTarget === 'silicone'">{{ss.aRules.mining.mSilicone}}</span>
-                </p>
-                <p>
-                  Mining Amount Adjusted for Mining Laser Level:
-                  <span *ngIf="shipS.aShip.miningTarget === 'ore'">{{ss.aRules.mining.mOre * shipS.aShip.moduleMiningLaserLevel}}</span>
-                  <span *ngIf="shipS.aShip.miningTarget === 'silicone'">{{ss.aRules.mining.mSilicone * shipS.aShip.moduleMiningLaserLevel}}</span>
-                </p>
-                <p>
-                  Yield: {{shipS.aShip.miningYield}}%
-                </p>
-                <p>
-                  Total Amount Mined per 15 Minutes:
-                  <span *ngIf="shipS.aShip.miningTarget === 'ore'">
-                    {{((ss.aRules.mining.mOre * shipS.aShip.moduleMiningLaserLevel) * (shipS.aShip.miningYield / 100))}}
-                  </span>
-                  <span *ngIf="shipS.aShip.miningTarget === 'silicone'">
-                    {{((ss.aRules.mining.mSilicone * shipS.aShip.moduleMiningLaserLevel) * (shipS.aShip.miningYield / 100))}}
-                  </span>
-                </p>
-                <p>
-                  If your ship does not have room, the excess is lost.
-                </p>
-              </ion-col>
-
-            </ion-grid>
-          </ion-card-content>
         </ion-card>
       </ion-col>
     </ion-row>
